<resources>
    <string name="app_name">zone</string>
    <string name="pin_register">pin register</string>
    <string name="lead_register">Cadastrar Lead</string>
    <string name="name_ec">Nome do EC</string>
    <string name="address_ec">endereço</string>
    <string name="c">c</string>
    <string name="tpv">TPV</string>
    <string name="choose_segment">Segment</string>
    <string name="visit">visita</string>
    <string name="register_address">Informe um endereço</string>
    <string name="location">location</string>
    <string name="visit_register">cadastrar uma visita</string>
    <string name="address_street">Rua</string>
    <string name="address_district">Bairro</string>
    <string name="address_number">Número</string>
    <string name="address_city">Cidade</string>
    <string name="save">salvar</string>
    <string name="home">Home</string>
    <string name="leads_clientes">Leads/Clientes</string>
    <string name="visits">Visitas</string>
    <string name="leads">Leads</string>
    <string name="clients">clients</string>
    <string name="clientes">clientes</string>
    <string name="enviar_proposta">Enviar Proposta</string>
    <string name="tornar_cliente">Tornar Cliente</string>
    <string name="agendar_visita">Agendar Visita</string>
    <string name="date">data</string>
    <string name="date_format">00/00</string>
    <string name="hour">hora</string>
    <string name="hour_format">00:00</string>
    <string name="observations">Observações</string>
    <string name="search">Procurar</string>
    <string name="filters">Filtros</string>
    <string name="from">de</string>
    <string name="to">ate</string>
    <string name="to_filter">Filtrar</string>
    <string name="remove">EXCLUIR</string>
    <string name="format_only_day">00</string>
    <string name="filter_leads">filtra leads</string>
    <string name="filter_clients">filtra clientes</string>
    <string name="icon_purple_pin">icon purple pin</string>
    <string name="t">T</string>
    <string name="message_request_permission">Este app precisa da Location permission, por favor aceite a funcionalidade location</string>
    <string name="message_request_permission_title">Permissão Location Negada</string>
</resources>