<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/businessNameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/business_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_ec"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/businessTPVTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/businessNameTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/businessNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/businessNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/business_tpv_form_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tpv" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/autoCompleteTextView_segment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/businessTPVTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/businessTPVTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/businessTPVTextInputLayout"
        app:startIconContentDescription="@string/choose_segment"
        app:startIconDrawable="@drawable/ic_segment">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView_segment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_segment"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/business_form_address_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/custom_ripple"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView_segment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/business_form_ic_locate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/location"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_form_business_msg_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_address"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_form_street_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/address_street"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/business_form_ic_locate"
                app:layout_constraintTop_toBottomOf="@+id/fragment_form_business_msg_card" />

            <TextView
                android:id="@+id/fragment_form_district_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/address_district"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/business_form_ic_locate"
                app:layout_constraintTop_toBottomOf="@+id/fragment_form_street_label" />

            <TextView
                android:id="@+id/fragment_form_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/address_city"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/business_form_ic_locate"
                app:layout_constraintTop_toBottomOf="@+id/fragment_form_district_label" />

            <TextView
                android:id="@+id/fragment_form_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/address_street"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_form_business_msg_card" />

            <TextView
                android:id="@+id/fragment_form_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/address_district"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_form_street" />

            <TextView
                android:id="@+id/fragment_form_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/address_city"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_form_district" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/form_schedule_save_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape_form_schedule_save"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>