<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="8dp"
    android:elevation="0dp"
    android:foreground="@drawable/custom_ripple"
    app:cardCornerRadius="16dp"
    app:cardElevation="1dp"
    app:contentPaddingBottom="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:strokeColor="#757575"
    app:strokeWidth="0.5dp"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_visit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/format_only_day"
            android:textAppearance="@style/TextAppearance.AppTheme.Headline5"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_visit_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="12sp"
            android:textAppearance="@style/TextAppearance.AppTheme.Body2"
            android:textColor="#757575"
            app:fontFamily="@font/googlesans_medium"
            app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_visit_date"
            tools:text="Ago" />

        <TextView
            android:id="@+id/item_visit_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/hour_format"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"  />

        <TextView
            android:id="@+id/item_visit_name_ec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="12sp"
            tools:text="@string/name_ec"
            android:textAppearance="@style/TextAppearance.AppTheme.Body2"
            android:textColor="#212121"
            app:fontFamily="@font/googlesans_bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/item_visit_hour"/>

        <TextView
            android:id="@+id/item_visit_segment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/choose_segment"
            android:textAppearance="@style/TextAppearance.AppTheme.Body2"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@+id/item_visit_hour" />

        <TextView
            android:id="@+id/item_visit_obs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:text="@string/observations"
            android:lines="1"
            android:textSize="12sp"
            android:textAppearance="@style/TextAppearance.AppTheme.Body2"
            android:textColor="#757575"
            android:fontFamily="@font/googlesans_medium"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/item_visit_name_ec" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="66dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="40dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>